# gcs-autopilot-commsys

./: .clangd  CMakeLists.txt  PRESENTATION.md  README.md
.github/workflows/: ci.yml
src/: autopilot_main.cpp  gcs_main.cpp  platform_posix.h
src/flight_logic/: FlightLogic.cpp  FlightLogic.h
src/network_layer/: NetworkLayer.cpp  NetworkLayer.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h
tests/: test_acl.py  test_all.py  test_heartbeat.py  test_tcp_commands.py  test_udp_checksum.py
